--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
       <h1 class="large" style="max-width: 1000px;">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
       <img src="images/cartells.svg?v=1">
       <div class="text">
-        <p style="font-weight: bold;">Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.</p>
-        <p>We started in December 2020, with 20 schools and 17 traffic cuts. In a short time, we have already grown to 63 mobilized centres. Next Friday, February 12th at 4:30 p.m., we will carry out 51 simultaneous roadblocks in three different cities: Barcelona, ​​Badalona and Sabadell. We have called it the <b>#SchoolRebellion</b>.</p>
-        <p>To give you an idea, these are the roadblocks that will take place at the next protest in Barcelona:</p>
-        <img src="/images/mapa-barcelona.jpg?v=1">
-        <p>The protest does not stop growing and is spreading to more cities, so it would be great if your PTA also encouraged you to participate!</p>
+        <p style="font-weight: bold;">Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
+        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since. Currently there are 63 mobilized schools, that are performing 52 roadblocks in front of their schools each Friday every two weeks. We are calling it the <b>#SchoolRebellion</b>.</p>
+        <p>The protest does not stop growing and is spreading to more cities.<br>It will be great if your PTA also joined the protest!</p>
         <h2>When will the next protests be?</h2>
-        <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: February 12th, February 26th, March 12th, March 26th, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
+        <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: <b>February 12th</b>, <b>February 26th</b>, <b>March 12th</b>, <b>March 26th</b>, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
         <h2>What should we do to join?</h2>
-        <p>First of all, the PTA of your education centre should approve adding to the protest, in a meeting. Once approved, you will have to notify your city government delegation of the date, time and place of the roadblock. This way, it will be the municipal police that will cut traffic off, thus guaranteeing your safety.</p>
-        <p>Secondly, you must maximize the announcement of the day, time and place of the protest; both to the families of the school, as well as to the neighbours and neighbourhood organizations. In this link, you can adapt and download the poster that we are using in the rest of the protests.</p>
+        <p>First of all, the PTA of your education centre should approve adding to the protest, in a meeting. Once approved, you will have to notify your city officials of the date, time and place of the roadblock. This way, it will be the city police that will cut traffic off, thus guaranteeing your safety.</p>
+        <p>Secondly, you must maximize the announcement of the day, time and place of the protest; both to the families of the school, as well as to the neighbours and neighbourhood organizations. In this link, you can adapt and download the poster that we are all using in the protest.</p>
         <div class="menu">
           <div class="button">
             <a href="poster" style="background: #F28C27">Download the poster</a>
