--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <div class="text">
         <p style="font-weight: bold;">Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
         <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since. Currently there are 63 mobilized schools, that are performing 52 roadblocks in front of their schools each Friday every two weeks. We are calling it the <b>#SchoolRebellion</b>.</p>
-        <p>The protest does not stop growing and is spreading to more cities.<br>It will be great if your PTA also joined the protest!</p>
+        <p>The protest does not stop growing and is spreading to more cities.</p>
+        <p><b>It will be great if your School's PTA also joined the protest!</b></p>
         <h2>When will the next protests be?</h2>
         <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: <b>February 12th</b>, <b>February 26th</b>, <b>March 12th</b>, <b>March 26th</b>, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
         <h2>What should we do to join?</h2>
