--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <img src="images/cartells.svg?v=1">
       <div class="text">
         <p style="font-weight: bold;">Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
-        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since. Currently there are 63 mobilized schools, that are performing 52 roadblocks in front of their schools each Friday every two weeks. We are calling it the <b>#SchoolRebellion</b>.</p>
+        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since. Currently there are 63 mobilized schools, that are performing 52 roadblocks in front of their schools each Friday every two weeks.</p>
+        <p>We are calling it the <b>#SchoolRebellion</b>.</p>
         <p>The protest does not stop growing and is spreading to more cities.</p>
         <p><b>It will be great if your School's PTA also joined the protest!</b></p>
         <h2>When will the next protests be?</h2>
