Updated mobile style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-  <link href="/application.css?v=9" media="all" rel="stylesheet" />
+  <link href="/application.css?v=10" media="all" rel="stylesheet" />
 </head>
 <body class="index">
   <div class="page">
@@ -33,13 +33,13 @@
       <img src="images/cartells.svg?v=1">
       <div class="text">
         <p style="font-weight: bold;">Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
-        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since. Currently there are 63 mobilized schools, that are performing 52 roadblocks in front of their schools each Friday every two weeks.</p>
+        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Currently we are 63 mobilized schools, performing 52 roadblocks in front of our schools each Friday every two weeks.</p>
         <p>We are calling it the <b>#SchoolRebellion</b>.</p>
         <p>The protest does not stop growing and is spreading to more cities.</p>
         <p><b>It will be great if your School's PTA also joined the protest!</b></p>
-        <h2>When will the next protests be?</h2>
+        <h2 class="section">When will the next protests be?</h2>
         <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: <b>February 12th</b>, <b>February 26th</b>, <b>March 12th</b>, <b>March 26th</b>, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
-        <h2>What should we do to join?</h2>
+        <h2 class="section">What should we do to join?</h2>
         <p>First of all, the PTA of your education centre should approve adding to the protest, in a meeting. Once approved, you will have to notify your city officials of the date, time and place of the roadblock. This way, it will be the city police that will cut traffic off, thus guaranteeing your safety.</p>
         <p>Secondly, you must maximize the announcement of the day, time and place of the protest; both to the families of the school, as well as to the neighbours and neighbourhood organizations. In this link, you can adapt and download the poster that we are all using in the protest.</p>
         <div class="menu">
