Fixed meta issue

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta property="og:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!"/>
   <meta property="og:description" content="Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
   <meta property="og:url" content="https://www.schoolrebellion.com"/>
-  <meta property="og:image" content="https://www.revueltaescolar.es/images/sharing.jpg?v=1"/>
+  <meta property="og:image" content="https://www.schoolrebellion.com/images/sharing.jpg?v=1"/>
   <meta property="og:site_name" content="schoolrebellion.com"/>
   <meta property="og:type" content="website"/>
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!">
-  <meta name="twitter:image" content="https://www.revueltaescolar.es/images/sharing.jpg?v=1">
+  <meta name="twitter:image" content="https://www.schoolrebellion.com/images/sharing.jpg?v=1">
   <meta name="twitter:description" content="Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
