--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <img src="images/cartells.svg?v=1">
       <div class="text">
         <p class="big">Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
-        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Currently we are 63 mobilized schools, performing 52 roadblocks in front of our schools each Friday every two weeks.</p>
+        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Currently we are 63 mobilized schools, performing 52 roadblocks in three different cities.</p>
         <p>We are calling it the <b>#SchoolRebellion</b>.</p>
-        <p>The protest does not stop growing and is spreading to more cities.</p>
-        <p><b>It will be great if your School's PTA also joined the protest!</b></p>
+        <p><b>It will be great if the schools at your city also joined the protest!</b></p>
+        <img src="/images/mapa-barcelona.jpg">
         <h2 class="section">When will the next protests be?</h2>
         <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: <b>February 12th</b>, <b>February 26th</b>, <b>March 12th</b>, <b>March 26th</b>, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
         <h2 class="section">What should you do to join?</h2>
@@ -48,7 +48,6 @@
           </div>
         </div>
         <p>One of the keys to the success of the <b>#SchoolRebellion</b> is the day and time it takes place: Friday, after school. It is important that when the students leave the centre, the street is already closed. In this way, it will be very easy for families to add themselves to the protest. It encourages them if you accompany the protest with some festive activity: music, games, etc, as long as the Covid-19 prevention measures allow it.</p>
-
         <p>We also recommend, a few days before the protest, that you get together a few families (in the park, or in a school classroom) to prepare posters for the protest. You can make very cool posters with some cardboard and some markers. You can use messages like: "Less cars, more health!", "Less noise!", "Less pollution!", etc. Having banners and posters works very well to encourage families to participate, and in this way the photos that are later running through the networks and WhatsApp groups speak for themselves.</p>
         <p>In <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0">this link</a>, you can see some photos of our previous protests</p>
         <img src="/images/protestas.png">
