--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>For safe and peaceful school environments! Join the #SchoolRebellion!</title>
-  <meta name="description" content="Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
+  <meta name="description" content="Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <meta property="og:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!"/>
-  <meta property="og:description" content="Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
+  <meta property="og:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
   <meta property="og:url" content="https://www.schoolrebellion.com"/>
   <meta property="og:image" content="https://www.schoolrebellion.com/images/sharing.jpg?v=1"/>
   <meta property="og:site_name" content="schoolrebellion.com"/>
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!">
   <meta name="twitter:image" content="https://www.schoolrebellion.com/images/sharing.jpg?v=1">
-  <meta name="twitter:description" content="Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
+  <meta name="twitter:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -24,9 +24,10 @@
   <div class="page">
     <div class="inner">
       <div class="lang">
-        <a href="https://www.revoltaescolar.cat">Català</a>
-        <a href="https://www.revueltaescolar.es">Español</a>
         <a href="https://www.schoolrebellion.com">English</a>
+        <a href="https://www.revueltaescolar.es">Español</a>
+        <a href="https://www.rebelliondesecoles.fr">Français</a>
+        <a href="https://www.revoltaescolar.cat">Català</a>
       </div>
       <h2>Join the #SchoolRebellion</h2>
       <h1 class="large" style="max-width: 1000px;">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
@@ -34,11 +35,11 @@
       <div class="text">
         <p class="big">Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
         <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Currently we are 63 mobilized schools, performing 52 roadblocks in three different cities.</p>
-        <p>We are calling it the <b>#SchoolRebellion</b>.</p>
+        <p>We are calling it the <a href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a>.</p>
         <p><b>It will be great if the schools at your city also joined the protest!</b></p>
         <img src="/images/mapa-barcelona.jpg">
         <h2 class="section">When will the next protests be?</h2>
-        <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: <b>February 12th</b>, <b>February 26th</b>, <b>March 12th</b>, <b>March 26th</b>, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
+        <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: <b>February 26th</b>, <b>March 12th</b>, <b>March 26th</b>, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
         <h2 class="section">What should you do to join?</h2>
         <p>First of all, the PTA of your education centre should approve adding to the protest, in a meeting. Once approved, you will have to notify your city officials of the date, time and place of the roadblock. This way, it will be the city police that will cut traffic off, thus guaranteeing your safety.</p>
         <p>Secondly, you must maximize the announcement of the day, time and place of the protest; both to the families of the school, as well as to the neighbours and neighbourhood organizations. In this link, you can adapt and download the poster that we are all using in the protest.</p>
@@ -47,7 +48,7 @@
             <a href="poster" style="background: #F28C27">Download the poster</a>
           </div>
         </div>
-        <p>One of the keys to the success of the <b>#SchoolRebellion</b> is the day and time it takes place: Friday, after school. It is important that when the students leave the centre, the street is already closed. In this way, it will be very easy for families to add themselves to the protest. It encourages them if you accompany the protest with some festive activity: music, games, etc, as long as the Covid-19 prevention measures allow it.</p>
+        <p>One of the keys to the success of the <a href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a> is the day and time it takes place: Friday, after school. It is important that when the students leave the centre, the street is already closed. In this way, it will be very easy for families to add themselves to the protest. It encourages them if you accompany the protest with some festive activity: music, games, etc, as long as the Covid-19 prevention measures allow it.</p>
         <p>We also recommend, a few days before the protest, that you get together a few families (in the park, or in a school classroom) to prepare posters for the protest. You can make very cool posters with some cardboard and some markers. You can use messages like: "Less cars, more health!", "Less noise!", "Less pollution!", etc. Having banners and posters works very well to encourage families to participate, and in this way the photos that are later running through the networks and WhatsApp groups speak for themselves.</p>
         <p>In <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0">this link</a>, you can see some photos of our previous protests</p>
         <img src="/images/protestas.png">
@@ -56,11 +57,11 @@
             <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0" target="_blank" style="background: #F69885">See more photos of the protests</a>
           </div>
         </div>
-        <p>Finally, it is important that you encourage other schools in your city to join the protest. The easiest thing is to create a WhatsApp or Telegram group that allows you to coordinate and add to all the PTAs in your region that may be interested in participating. Sharing the experience encourages other centres to participate.</p>
-        <p>If you finally take the step, we will also ask you to <a href="mailto:eixample.respira@gmail.com?subject=We%20are%20joining%20the%20%23SchollRebellion!&body=Hi%2C%0D%0A%0D%0AWe%20are%20writing%20to%20notify%20we%20will%20are%20joining%20the%20%23SchollRebellion.%20We%20will%20be%20blocking%3A%0D%0A%0D%0A-%20country%3A%20%5BCOUNTRY%5D%0D%0A-%20city%3A%20%5BCITY%5D%0D%0A-%20date%3A%20%5BDATE%5D%0D%0A-%20street%3A%20%5BSTREET%20X%20with%20CALL%20Y%5D%0D%0A-%20time%3A%20%5BHH%3A%20MM%5D%0D%0A-%20callers%3A%20%5BPTA%20FROM%20SCHOOL%20X%2C%20PTA%20FROM%20SCHOOL%20Y%2C%20...%5D%0D%0A%0D%0AThank%20you!%0D%0A%0D%0A%E2%80%94%20PTA%20FROM%20SCHOOL%20X">notify us</a>. In this way we can keep track of how the protest is growing, and we can help you if you have any questions.</p>
+        <p>Finally, it is important that you encourage other schools in your city to join the protest. The easiest thing is to create a WhatsApp or Telegram group that allows you to coordinate and add to all the PTAs in your region that may be interested in participating. Sharing the experience encourages other schools to participate.</p>
+        <p>If you finally take the step, we will also ask you to <a href="https://docs.google.com/forms/d/1dUgkXlcKB9--D3cn6XEInjizBcrXhbKlJGA2I7lLXbQ?hl=en">notify us</a>. In this way we can keep track of how the protest is growing, and we can help you if you have any questions.</p>
         <div class="menu">
           <div class="button">
-            <a href="mailto:eixample.respira@gmail.com?subject=We%20are%20joining%20the%20%23SchollRebellion!&body=Hi%2C%0D%0A%0D%0AWe%20are%20writing%20to%20notify%20we%20will%20are%20joining%20the%20%23SchollRebellion.%20We%20will%20be%20blocking%3A%0D%0A%0D%0A-%20country%3A%20%5BCOUNTRY%5D%0D%0A-%20city%3A%20%5BCITY%5D%0D%0A-%20date%3A%20%5BDATE%5D%0D%0A-%20street%3A%20%5BSTREET%20X%20with%20CALL%20Y%5D%0D%0A-%20time%3A%20%5BHH%3A%20MM%5D%0D%0A-%20callers%3A%20%5BPTA%20FROM%20SCHOOL%20X%2C%20PTA%20FROM%20SCHOOL%20Y%2C%20...%5D%0D%0A%0D%0AThank%20you!%0D%0A%0D%0A%E2%80%94%20PTA%20FROM%20SCHOOL%20X" target="_blank" style="background: #F9B733;">Notify the protest</a>
+            <a href="https://docs.google.com/forms/d/1dUgkXlcKB9--D3cn6XEInjizBcrXhbKlJGA2I7lLXbQ?hl=en" target="_blank" style="background: #F9B733;">Notify the protest</a>
           </div>
         </div>
         <p>If you have any questions or queries, do not hesitate to contact us at <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a> or by phone at <a href="tel:+34620426435">+34 620 426 435</a>.</p>
