--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-  <link href="/application.css?v=14" media="all" rel="stylesheet" />
+  <link href="/shared/application.css?v=14" media="all" rel="stylesheet" />
 </head>
 <body class="index">
   <div class="page">
@@ -51,7 +51,7 @@
         <p>One of the keys to the success of the <a href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a> is the day and time it takes place: Friday, after school. It is important that when the students leave the centre, the street is already closed. In this way, it will be very easy for families to add themselves to the protest. It encourages them if you accompany the protest with some festive activity: music, games, etc, as long as the Covid-19 prevention measures allow it.</p>
         <p>We also recommend, a few days before the protest, that you get together a few families (in the park, or in a school classroom) to prepare posters for the protest. You can make very cool posters with some cardboard and some markers. You can use messages like: "Less cars, more health!", "Less noise!", "Less pollution!", etc. Having banners and posters works very well to encourage families to participate, and in this way the photos that are later running through the networks and WhatsApp groups speak for themselves.</p>
         <p>In <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0">this link</a>, you can see some photos of our previous protests</p>
-        <img src="/images/protestas.png">
+        <img src="/shared/images/protestas.png">
         <div class="menu">
           <div class="button">
             <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0" target="_blank" style="background: #F69885">See more photos of the protests</a>
