--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <h1 class="large" style="max-width: 1000px;">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
       <img src="images/cartells.svg?v=2">
       <div class="text">
-        <p class="big">Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
+        <p class="big">PTAs (Parents and Teachers Associations), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
         <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Currently we are 63 mobilized schools, performing 52 roadblocks in three different cities.</p>
-        <p>We are calling it the <a href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a>.</p>
+        <p>We are calling it the <a class="bold" href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a>.</p>
         <p><b>It will be great if the schools at your city also joined the protest!</b></p>
         <img src="/images/mapa-barcelona.jpg">
         <h2 class="section">When will the next protests be?</h2>
