--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
       <img src="images/cartells.svg?v=2">
       <div class="text">
         <p class="big">PTAs (Parents and Teachers Associations), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
-        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Currently we are 63 mobilized schools, performing 52 roadblocks in three different cities.</p>
-        <p>We are calling it the <a class="bold" href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a>.</p>
-        <p><b>It will be great if the schools at your city also joined the protest!</b></p>
+        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Last Friday, February 12th we were 63 mobilized schools, performing 52 roadblocks in three different cities. We are calling it the <a class="bold" href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a>. For February 26th we are hoping for other cities to join us. <b>Would you help us spread the word?</b></p>
         <img src="/images/mapa-barcelona.jpg">
         <h2 class="section">When will the next protests be?</h2>
         <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: <b>February 26th</b>, <b>March 12th</b>, <b>March 26th</b>, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
