--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>For safe and peaceful school environments! Join the #SchoolRebellion!</title>
-  <meta name="description" content="Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
+  <meta name="description" content="Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater street traffic pacification and safety of school environments, less pollution and less noise.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <meta property="og:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!"/>
-  <meta property="og:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
+  <meta property="og:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater street traffic pacification and safety of school environments, less pollution and less noise.">
   <meta property="og:url" content="https://www.schoolrebellion.com"/>
   <meta property="og:image" content="https://www.schoolrebellion.com/images/sharing.jpg?v=1"/>
   <meta property="og:site_name" content="schoolrebellion.com"/>
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!">
   <meta name="twitter:image" content="https://www.schoolrebellion.com/images/sharing.jpg?v=1">
-  <meta name="twitter:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
+  <meta name="twitter:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater street traffic pacification and safety of school environments, less pollution and less noise.">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
       <h1 class="large" style="max-width: 1000px;">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
       <img src="images/cartells.svg?v=2">
       <div class="text">
-        <p class="big">PTAs (Parents and Teachers Associations), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater pacification and safety of school environments, less pollution and less noise.</p>
+        <p class="big">PTAs (Parents and Teachers Associations), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater street traffic pacification and safety of school environments, less pollution and less noise.</p>
         <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Last Friday, February 12th we were 63 mobilized schools, performing 52 roadblocks in three different cities. We are calling it the <a class="bold" href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a>. For February 26th we are hoping for other cities to join us. <b>Would you help us spread the word?</b></p>
         <img src="/images/mapa-barcelona.jpg">
         <h2 class="section">When will the next protests be?</h2>
