--- a/poster.html
+++ b/poster.html
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div class="section support">
-              <div class="text" style="display: none;">With support from::</div>
+              <div class="text" style="display: none;">With support from:</div>
               <div class="images">
               </div>
             </div>
