Added info for 26F

--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
         <p>If you have any questions or queries, do not hesitate to contact us at <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a> or by phone at <a href="tel:+34620426435">+34 620 426 435</a>.</p>
       </div>
     </div>
+    <div class="talls">
+      <div class="inner">
+        <h2>51 roadblocks organized for<br>Friday, February 26 at 4:30 p.m.</h2>
+        <p><b>Barcelona:</b> Auró, Miralletes, Broggi, Diputació, Sagrada Família, Fructuós Gelabert, Octavio Paz, Els Llorers, Joan Miró, Institut Ernest Lluch, 9 Graons, Antoni Balmanya, Dovella, Torrent de Can Carabassa, Concepció, Rius i Taulet, Josep Maria Jujol, Ítaca, Anglesola, Voramar, Bogatell, Encants, Escola de les Aigües, Gaia, Jesuïtes Casp, Casas, Farigola, Arenal de Llevant, Ferran Sunyer, Fort Pienc, Pere Vila, Institut Pau Claris, Escola 30 passos, Mallorca, Pere IV, Institut Quatre Cantons, Claret, Auditori, Santa Anna, EBM El Fil, Pràctiques, Jaume I, EBM El Timbal, Pia Balmes, Tabor, Catalònia, Fluvià, Font d'en Fargas, Escola Poblenou, Torrent d'en Melis, Estel Guinardó, Bressol Montserrat, Rambleta del Clot, Ferdinand de Lesseps</b>
+        <p><b>Sabadell:</b> Enric Casassas, Samuntada, Joanot Alisenda, Nostra Llar.</p>
+        <p><b>Badalona:</b> Ventós Mir, Progrés, Badalona Port.</p>
+        <p><b>Sant Cugat:</b> Joan Maragall, Collserola.</p>
+        </p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
