--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>For safe and peaceful school environments! Join the #SchoolRebellion!</title>
-  <meta name="description" content="Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater street traffic pacification and safety of school environments, less pollution and less noise.">
+  <meta name="description" content="Parents and Teachers Associations (PTAs), in collaboration with neighbourhood organizations, are carrying out roadblocks every first Friday of the month when leaving school to demand greater street traffic pacification and safety of school environments, less pollution and less noise.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <meta property="og:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!"/>
-  <meta property="og:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater street traffic pacification and safety of school environments, less pollution and less noise.">
+  <meta property="og:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every first Fridays of the month when leaving school to demand greater street traffic pacification and safety of school environments, less pollution and less noise.">
   <meta property="og:url" content="https://www.schoolrebellion.com"/>
   <meta property="og:image" content="https://www.schoolrebellion.com/images/sharing.jpg?v=1"/>
   <meta property="og:site_name" content="schoolrebellion.com"/>
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!">
   <meta name="twitter:image" content="https://www.schoolrebellion.com/images/sharing.jpg?v=1">
-  <meta name="twitter:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater street traffic pacification and safety of school environments, less pollution and less noise.">
+  <meta name="twitter:description" content="Parents and Teachers Associations (PTAs) in Barcelona, in collaboration with neighbourhood organizations, are carrying out roadblocks every first Friday of the month when leaving school to demand greater street traffic pacification and safety of school environments, less pollution and less noise.">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
       <h1 class="large" style="max-width: 1000px;">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
       <img src="images/cartells.svg?v=2">
       <div class="text">
-        <p class="big">PTAs (Parents and Teachers Associations), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater street traffic pacification and safety of school environments, less pollution and less noise.</p>
+        <p class="big">PTAs (Parents and Teachers Associations), in collaboration with neighbourhood organizations, are carrying out roadblocks every first Friday of the month when leaving school to demand city officials greater street traffic pacification and safety of school environments, less pollution and less noise.</p>
         <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Last Friday, February 26th, the sixth consecutive day of protests, we were +75 mobilized schools in eight different cities. We are calling it the <a class="bold" href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a>.</p>
         <p><b>It would be great if your PTA also joined, taking the protest to your city!</b></p>
         <div class="menu">
@@ -50,7 +50,7 @@
         <!-- <img src="/images/mapa-barcelona-en.jpg"><br>
         <img src="/images/mapa-madrid-en.jpg"> -->
         <h2 class="section">When will the next protests be?</h2>
-        <p>It is important that we all go together to make a greater impact. Next Friday of protests is <b>May 7th</b>. Always on Friday, every 2 weeks, and at the time of school closure.</p>
+        <p>It is important that we all go together to make a greater impact. Every first Friday of each month and at the time of school closure.</p>
         <h2 class="section">What should you do to join?</h2>
         <p>First of all, the PTA of your education centre should approve adding to the protest, in a meeting. Once approved, you will have to notify your city officials of the date, time and place of the roadblock. This way, it will be the city police that will cut traffic off, thus guaranteeing your safety.</p>
         <p>Secondly, you must maximize the announcement of the day, time and place of the protest; both to the families of the school, as well as to the neighbours and neighbourhood organizations. In this link, you can adapt and download the poster that we are all using in the protest.</p>
@@ -70,7 +70,6 @@
             <a href="https://docs.google.com/forms/d/1dUgkXlcKB9--D3cn6XEInjizBcrXhbKlJGA2I7lLXbQ?hl=en" target="_blank" style="background: #F9B733;">Notify the protest</a>
           </div>
         </div>
-        <p>If you have any questions or queries, do not hesitate to contact us at <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a> or by phone at <a href="tel:+34620426435">+34 620 426 435</a>.</p>
       </div>
     </div>
     <div class="talls">
